--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
 
 
 .GameField {
-  border: 1px solid black;
+  border: 1px solid lightslategray;
   position: relative;
   width: 500px;
   height: 500px;
